@@ -7,6 +7,7 @@ synaptic (0.57.11.1ubuntu13) feisty; urgency=low
     - fix chinese descriptions display, thanks to Liu Qishuai 
       (LP#102228)
   * fix drop down boxes in preferences (LP#100072)
+  * fix terminal window (LP#99877)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue,  3 Apr 2007 22:23:48 +0200
 
